# src/swagger.json
@@ -4180,87 +4180,6 @@
                 }
             }
     },"/posts":{
-        "post":{
-            "summary": "Criar publicação",
-            "description": "Esta rota vai permitir criar uma publicação",
-            "tags": ["Posts"],
-            "requestBody": {
-                "content": {
-                    "application/json":{
-                        "schema":{
-                            "properties":{
-                                "criadorId":{
-                                    "type": "string"
-                                }, 
-                                "descricao":{
-                                    "type": "string"
-                                },
-                                "tipo":{
-                                    "type": "number"
-                                }, 
-                                "ginasioId":{
-                                    "type": "string",
-                                    "nullable": true
-                                },
-                                "identificacao":{
-                                    "type": "array",
-                                    "items": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        },
-                        "examples": {
-                            "Editar Treino":{
-                                "value":{
-                                    
-                                    "criadorId": "000d1e14-617e-423e-8a1a-f63d4fa5af6a",
-                                    "descricao": "teste1",
-                                    "tipo": 3,
-                                    "ginasioId": null,
-                                    "indentificacao":null
-                                    
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "responses": {
-                "500":{
-                    "description": "ERROR"  
-                },
-                "200":{
-                    "description": "OK",
-                    "content": {
-                        "application/json":{
-                            "schema":{
-                                "properties": {
-                                    "msg":{
-                                        "type": "string"
-                                    }
-                                }
-                            },
-                            "examples": {
-                                "Publicacao":{
-                                    "value":{
-                                        "post": {
-                                            "publicacao_id": "0e062989-88e5-4c45-97ec-6af212ca566d",
-                                            "criador_id": "000d1e14-617e-423e-8a1a-f63d4fa5af6a",
-                                            "data": "2022-04-14T12:32:31.468Z",
-                                            "descricao": "teste1",
-                                            "tipo": 3,
-                                            "ginasio_id": null,
-                                            "isDeleted": false
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }          
-            }
-        },
         "put":{
             "summary": "Editar publicação",
             "description": "Esta rota vai permitir editar uma publicação",
@@ -4925,6 +4844,95 @@
                         }
                     }
                 }          
+            }
+        }
+    },
+    "/{criadorId}/posts":{
+        "post":{
+            "summary": "Criar publicação",
+            "description": "Esta rota vai criar na base de dados os posts",
+            "tags": ["Posts"],
+            "parameters":[
+            {
+                "name": "criadorId",
+                "in": "path",
+                "description": "Id do criador",
+                "required": true,
+                "schema":{
+                    "properties": {
+                        "criador":{
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        ],
+        "requestBody":{
+            "content": {
+                "application/json":{
+                    "schema":{
+                        "properties":{
+                            "descricao":{
+                                "type": "string"
+                            },
+                            "tipo":{
+                                "type": "number"
+                            },
+                            "ginasioId":{
+                                "type": "string",
+                                "nullable": true
+                            },
+                            "identificacao": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                    
+                            }
+                        }
+                    },
+                    "examples": {
+                        "Criar Posts":{
+                            "value":{
+                                "descricao":"teste",
+                                "tipo":1,
+                                "ginasio_id": null,
+                                "identificacao": ["02de0f10-df8b-4d1e-955f-22d3211b66da","0a169c30-208d-4931-9400-15d44ba57690"]
+                            }
+                        }
+                    }
+                }
+            }
+        },
+       
+            "responses": {
+                "500":{
+                    "description": "ERROR"  
+                },
+                 "200":{
+                    "description": "OK",
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                
+                                "properties": {
+                                    "msg":{
+                                        "type": "string"
+                                    }
+                                }
+                            }, 
+                            "examples": {
+                                "Criar posts":{
+                                    "value":{
+                                        "msg":"Publicação criada com sucesso"
+                                    }
+                                }
+                            }                                       
+                        }
+                    }
+    
+                }
+                
             }
         }
     }  
